<resources>
    <string name="app_name">Oficios</string>
    <!-- activity_main.xml -->
    <string name="description_button_label">Descripci\u00f3n de la app</string>
    <string name="find_service_button_label">Busco un servicio</string>
    <string name="provide_service_button_label">Ofrezco un servicio</string>
    <string name="developed_by_text_label">"Desarrollado por "</string>
    <!-- activity_ingresar_datos.xml -->
    <string name="input_data_text_label">Ingresar datos</string>
    <string name="zipcode_edittext_hint">C\u00f3digo postal</string>
    <string name="mobile_phone_edittext_hint">N\u00famero celular</string>
    <string name="webpage_edittext_hint">P\u00e1gina web o p\u00e1gina de Facebook</string>
    <string name="already_registered_button_label">Ya me registr\u00e9</string>
    <!-- activity_busqueda_servicios.xml -->
    <string name="find_service_edittext_hint">Buscar servicio</string>
    <string name="find_zipcode_edittext_hint">Buscar c\u00f3digo postal</string>
    <string name="search_button_label">Buscar</string>
    <!-- activity_registro.xml -->
    <string name="registry_text_label">Registro</string>
    <string name="provider_name_edittext_hint">Nombre</string>
    <string name="provider_email_edittext_hint">Correo electr\u00f3nico</string>
    <string name="provider_password_edittext_hint">Contrase\u00f1a</string>
    <string name="provider_password_confirmation_edittext_hint">Confirma contrase\u00f1a</string>
    <string name="submit_registry_button_label">Enviar registro</string>
    <!-- activity_iniciar_sesion.xml -->
    <!--<string name="provider_name_edittext_hint">Nombre</string>-->
    <!--<string name="provider_password1_edittext_hint">Contrase\u00f1a</string>-->
    <string name="sign_in_button_label">Iniciar sesi\u00f3n</string>
</resources>
