<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".Registro">

    <TextView
        android:id="@+id/registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registry_text_label" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registro"
        android:hint="@string/provider_name_edittext_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombre"
        android:hint="@string/provider_email_edittext_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/contrasegna"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:hint="@string/provider_password_edittext_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/confirmaContrasegna"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contrasegna"
        android:hint="@string/provider_password_confirmation_edittext_hint"
        android:inputType="text" />

    <Button
        android:id="@+id/confirmarBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmaContrasegna"
        android:text="@string/submit_registry_button_label"/>

    <Button
        android:id="@+id/yaMeRegistreBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/confirmarBtn"
        android:layout_alignBaseline="@id/confirmarBtn"
        android:text="@string/already_registered_button_label"/>

</RelativeLayout>
