<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".BusquedaServicios">

    <ImageView
        android:id="@+id/logo5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/abc_vector_test" />

    <EditText
        android:id="@+id/buscaServicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/find_service_edittext_hint"
        android:inputType="text"/>

    <EditText
        android:id="@+id/buscaCodigoPostal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buscaServicio"
        android:hint="@string/find_zipcode_edittext_hint"
        android:inputType="text"/>

    <Button
        android:id="@+id/buscarServiciosBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buscaCodigoPostal"
        android:text="@string/search_button_label"/>

</RelativeLayout>
